Updated install scripts for new sandbox structure

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 # Let the project repos track these, rather than the sandbox repo.
 foundation_patterns/
 foundation_patterns_config/
+
+# Drupal things that don't belong in repo.
+drupal/sites/default/files/
+drupal/sites/default/settings.php
