--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
       - 443:443
     privileged: true
     volumes:
-      - ./foundation_patterns/:/var/www/foundation_patterns/:rw,delegated
-      - ./foundation_patterns_config/:/var/www/foundation_patterns_config/:rw,delegated
+      - ./drupal:/var/www/drupalvm/drupal/web/:rw,delegated
+      - ./foundation_patterns/:/var/www/drupalvm/drupal/web/themes/foundation_patterns/:rw,delegated
+      - ./foundation_patterns_config/:/var/www/drupalvm/drupal/web/modules/custom/foundation_patterns_config/:rw,delegated
       - /var/lib/mysql
     command: /lib/systemd/systemd
