--- a/drupal-project/composer.json
+++ b/drupal-project/composer.json
@@ -22,6 +22,7 @@
         "drupal/components": "^1.0",
         "drupal/console": "^1.0.2",
         "drupal/core": "~8.5",
+        "drupal/paragraphs": "^1.0",
         "drupal/ui_patterns": "^1.0",
         "drupal/zurb_foundation": "^6.0",
         "drush/drush": "^9.0.0",
